# conan

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  backend.py  constants.py  generate_assets.py  generate_assets.sh  justfile  labels.py  main.py  models.py  player.py  pyrightconfig.json  requirements.txt  ruff.toml  style.qss  templates.py  toolchain-amd64-windows.cmake  track_player_info.html  track_template.html
assets/: asset_converter.py  style.qss
assets/templates/: player_info.html  track_analysis.html  track_template.html
doc/: titleformat_help.css  titleformat_help.html
misc/: ffmpeg.patch  tensorflow.supp
models/: danceability-discogs-effnet-1.json  engagement_3c-discogs-effnet-1.json  genre_discogs400-discogs-effnet-1.json  mood_aggressive-discogs-effnet-1.json  mood_relaxed-discogs-effnet-1.json  mood_sad-discogs-effnet-1.json  moods_mirex-msd-musicnn-1.json  msd-musicnn-1.json  mtg_jamendo_genre-discogs-effnet-1.json
src/: conan_util.cpp  conan_util.h  main.cpp  server.cpp  server.h
src/include/: time.h
src/include/assets/: favicon.cpp  favicon.h  no_cover_art.h  stylesheet.h  util.cpp  util.h
src/include/assets/icons/: pause.h  play.h  skip.h  stop.h
src/include/assets/templates/: player_info.h  track_analysis.h
src/layouts/: content.cpp  content.h  f2k.cpp  f2k.h  f2k_types.h  progress_bar.cpp  progress_bar.h  toolbar.cpp  toolbar.h  webkit_widget.cpp  webkit_widget.h  weight_slider.cpp  weight_slider.h
src/workers/: analysis.cpp  analysis.h  beef.cpp  beef.h  db.cpp  db.h  server.cpp  server.h
templates/: track_template.html
typings/: readme.md
typings/essentia/standard/: __init__.pyi
